--- a/BearingDegradation.ipynb
+++ b/BearingDegradation.ipynb
@@ -38,7 +38,7 @@
    "outputs": [],
    "source": [
     "# data load\n",
-    "data_dir ='/Users/mathewlong/Documents/FAIM_Data/DataScienceHandBook/IMS/2nd_test'\n",
+    "data_dir ='../2nd_test'\n",
     "merged_df = pd.DataFrame()\n",
     "\n",
     "for filename in os.listdir(data_dir):\n",
@@ -962,9 +962,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
